[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
name = "easydel"
version = "0.2.0"
authors = [{ name = "Erfan Zare Chavoshi", email = "Erfanzare810@gmail.com" }]
description = "Accelerate, Optimize performance with streamlined training and serving options with JAX."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
keywords = [
	"Deep Learning",
	"Machine Learning",
	"JAX",
	"CUDA",
	"XLA",
	"Triton",
	"Pallas",
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
dependencies = [
	"jax>=0.8.2",
	"jaxlib>=0.8.2",
	"ray[default]==2.51.0",
	"eformer==0.0.85",
	"ejkernel[triton]==0.0.45",
	"einops~=0.8.0",
	"transformers~=4.57.3",
	"sentencepiece>=0.2.0",
	"flax==0.11.2",
	"fastapi>=0.115.2",
	"wandb>=0.22.2",
	"uvloop==0.21.0",
	"uvicorn[standard]>=0.32.0",
	"jinja2>=3.1.5",
	"grain~=0.2.11",
	"datasets>=3.6.0",
	"gcsfs>=2024.2,<2026",
	"zstandard>=0.23.0",
	"pyyaml>=6.0",
	"msgspec~=0.19.0",
	"partial-json-parser>=0.2.1.1.post6",
	"google-api-python-client>=2.179.0",
	"cryptography>=45.0.6",
	"pyzmq>=27.1.0",
	"grafanalib>=0.7.1",
]

[project.urls]
"Homepage" = "https://github.com/erfanzar/EasyDeL"
"Repository" = "https://github.com/erfanzar/EasyDeL"
"Documentation" = "https://easydel.readthedocs.io/en/latest/"


[tool.uv.build-backend]
module-name = "easydel"
module-root = "."

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"easydel" = ["py.typed"]

[project.optional-dependencies]
torch = ["torch==2.8.0", "tensorboard>=2.19.0"]
gpu = [
	"jax[cuda12]>=0.8.2",
	"torch==2.8.0",
	"tensorboard>=2.19.0",
	"ejkernel[gpu]==0.0.45",
]
tpu = ["jax[tpu]>=0.8.2", "tensorboard>=2.19.0", "ejkernel[tpu]==0.0.45"]
tensorflow = ["tensorflow~=2.19.0", "tensorflow-datasets~=4.9.9"]
lm_eval = ["lm_eval~=0.4.9.1"]
profile = [
	"xprof>=2.20.6",
	"tb-nightly>=2.21.0a20250820",
	"xprof-nightly>=2.21.6a20250820",
]
[tool.black]
line-length = 121
target-version = ["py311"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py311"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "NPY", "RUF", "UP", "W"]
ignore = [
	"F722",  # Forward annotations needed for jaxtyping
	"B008",  # Do not perform function calls in argument defaults
	"UP015", # Unnecessary open mode
	"A005",  # Module-level shadowing
	"UP037", # Remove quotes from type annotation - needed for jaxtyping string literals
	"E501",  # Line too long (handled by formatter)
	"RUF001", # Ruff's own complexity check - handled by other tools
	"RUF002", # Ruff's own complexity check - handled by other tools
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/modeling_*.py" = [
	"UP037",
	"F821",
] # Allow quoted type annotations and forward refs in model files

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["easydel/"]

[tool.basedpyright]
reportAssignmentType = "none"
reportUnknownVariableType = "none"
reportPrivateUsage = "none"
reportOptionalCall = "none"
reportUnknownMemberType = "none"
reportGeneralTypeIssues = "none"
reportArgumentType = "none"
enableTypeIgnoreComments = true
reportMissingTypeArgument = "none"
reportUnknownParameterType = "none"
reportAny = "none"
reportCallIssue = "none"
reportUnknownArgumentType = "none"
reportRedeclaration = "none"
reportIgnoreCommentWithoutRule = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedCallResult = "none"
reportUnknownLambdaType = "none"
reportUnannotatedClassAttribute = "none"
reportImplicitStringConcatenation = "none"
reportMissingParameterType = "none"
reportImplicitOverride = "none"
reportImplicitAbstractClass = "none"
reportExplicitAny = "none"
reportIncompatibleMethodOverride = "none"
reportIndexIssue = "none"
reportAttributeAccessIssue = "none"
reportUnreachable = "none"
reportOptionalMemberAccess = "none"
reportOperatorIssue = "none"
reportUninitializedInstanceVariable = "none"
reportIncompatibleVariableOverride = "none"
reportPrivateImportUsage = "none"
reportUnusedParameter = "none"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.uv]
conflicts = [
	[
		{ extra = "gpu" },
		{ extra = "tpu" },
	],
	[
		{ extra = "gpu" },
		{ extra = "torch" },
	],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu", marker = "extra == 'torch'" }
